--- a/templates/includes/sections/3-up-people.twig
+++ b/templates/includes/sections/3-up-people.twig
@@ -14,14 +14,14 @@
 			<div class="col col-xs-12 col-md-6 col-lg-4">
 				<div class="card people">
 					<div class="card-header-wrapper">
-						<img class="card-img-large" src="includes/img/imgplaceholder.jpg" alt="person name"/>
+						<img class="card-img-large" src="{{ person.image.one.url() }}" alt="{{ person.personTitle }}"/>
 						<div class="flex middle-xs between-xs space-md-up text-left">
 							<div>
 								<h4>{{ person.personTitle }}</h4>
 								<h5 >{{ person.subtitle }}</h5>
 							</div>
 							{% if person.linkedin %}
-							<a href="{{ person.linkedin }}"><img class="social-icon" src="includes/img/linkedin.svg" alt="linkedin"/></a>
+							<a href="{{ person.linkedin }}" target="_blank"><img class="social-icon" src="includes/img/linkedin.svg" alt="{{ person.personTitle }} linkedin profile"/></a>
 							{% endif %}
 						</div>
 					</div>
