--- a/src/style/02-base/_headings.scss
+++ b/src/style/02-base/_headings.scss
@@ -28,6 +28,10 @@ p, a {
 	}
 }
 
+.small p, .small a {
+	font-size: 1rem !important;
+}
+
 .text-editor-wrapper p {
 	font-size: 1.125rem !important;
 }
