--- a/templates/includes/sections/jumbo-header.twig
+++ b/templates/includes/sections/jumbo-header.twig
@@ -7,7 +7,12 @@
 	<div class="container">
 		<div class="row middle-xs center-xs">
 			<div class="col col-xs-12 col-md-6 text-left-md">
-				<div class="text-padding">
+				{% if jumboHeaderLink is empty %}
+					{% set spacing = ' space-xs space-sm space-md' %}
+				{% else %}
+					{% set spacing = '' %}
+				{% endif %}
+				<div class="text-padding {{ spacing }}">
 					<h1>{{ heading }}</h1>
 					{{ text }}
 					{% if jumboHeaderLink %}
