footer: add some links

--- a/templates/includes/partials/footer.twig
+++ b/templates/includes/partials/footer.twig
@@ -43,13 +43,13 @@
 							</ul>
 						</div>
 						<div class="col col-xs-12 col-md-6 text-right text-center-xs text-center-sm text-right-md">
-							<a href="#" class="social-link">
+							<a href="https://www.facebook.com/CobiroAI/" class="social-link" target="_blank">
 								<img src="includes/img/facebook.svg" alt="Facebook" />
 							</a>
-							<a href="#" class="social-link">
+							<a href="https://twitter.com/cobiroai" class="social-link" target="_blank">
 								<img src="includes/img/twitter.svg" alt="Twitter" />
 							</a>
-							<a href="#" class="social-link">
+							<a href="https://www.instagram.com/cobiroai/" class="social-link" target="_blank">
 								<img src="includes/img/instagram.svg" alt="Instagram" />
 							</a>
 						</div>
