fix subsubMenu in menu

--- a/templates/includes/partials/menu.twig
+++ b/templates/includes/partials/menu.twig
@@ -45,16 +45,16 @@
 																	{% endif %}
 																	{{ subMenuItems.title }}</a>
 																{% if subMenuItems.hasDescendants() %}
-																	<div  class="subsubmenu">
+																	<div class="subsubmenu">
 																		<ul class="list-unstyled">
 																			<li><a class="hidden-lg hidden-xl" href="{{ subLink }}" {{ subMenuItems.openInNewWindow ? 'target="_blank"' }}>{{ subMenuItems.title }}</a></li>
 																	{% set subMenuItemsFetchedLevelThree = subMenuItems.descendants.level(3).all()%}
 																	{% for subSubMenuItems in subMenuItemsFetchedLevelThree %}
 
 																	{% if subSubMenuItems.linkedEntry.one.url is defined %}
-																		{% set subSubLink = subMenuItems.linkedEntry.one.url %}
-																	{% elseif  subMenuItems.externalUrl is defined %}
-																		{% set subSubLink = subMenuItems.externalUrl %}
+																		{% set subSubLink = subSubMenuItems.linkedEntry.one.url %}
+																	{% elseif  subSubMenuItems.externalUrl is defined %}
+																		{% set subSubLink = subSubMenuItems.externalUrl %}
 																	{% else %}
 																		{% set subSubLink = subMenuItems.externalLink %}
 																	{% endif %}
