--- a/templates/includes/sections/feature-list.twig
+++ b/templates/includes/sections/feature-list.twig
@@ -3,10 +3,13 @@
 {% else %}
 	{% set style = null %}
 {% endif %}
-<section class="section" {{ style }}>
+{% if idValue %}
+	{% set id = 'id=' ~ idValue %}
+{% else %}
+	{% set id = null %}
+{% endif %}
+<section class="section" {{ style }} {{ id }}>
 	<div class="container">
-
-
 		{% set allFeatures = featureList %}
 		{% for row in allFeatures %}
 
