--- a/templates/includes/partials/header.twig
+++ b/templates/includes/partials/header.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ craft.app.locale }}">
 <head>
+	{{ craft.googleTagManager.headSection() }}
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
 	{% if entry is defined and entry.slug != 'homepage' %}
@@ -78,4 +79,5 @@
 	<link rel="stylesheet" type="text/css" href="includes/css/style.css">
 </head>
 <body>
+{{ craft.googleTagManager.bodySection() }}
 {% include 'includes/partials/menu.twig' %}
