--- a/templates/includes/sections/3-up.twig
+++ b/templates/includes/sections/3-up.twig
@@ -25,7 +25,7 @@
 						{% if card.cardLink %}
 							{% if card.cardLink.one.href.one.url is defined %}
 								{% set link = card.cardLink.one.href.one.url %}
-								<a class="small" href="{{ link }}">{{ card.cardLink.one.linkTitle }}</a>
+								<a class="small" href="{{ link }}{{ card.cardLink.one.idLink ?  '#' ~ card.cardLink.one.idLink : ''}}">{{ card.cardLink.one.linkTitle }}</a>
 							{% elseif card.cardLink.one.href is defined %}
 								{% set link = card.cardLink.one.href %}
 								<a class="small" href="{{ link }}">{{ card.cardLink.one.linkTitle }}</a>
