--- a/src/style/04-components/_accordion.scss
+++ b/src/style/04-components/_accordion.scss
@@ -10,6 +10,9 @@
 		max-height: none;
 	}
 }
+.accordion-header {
+	cursor: pointer;
+}
 // .btn-accordion {
 // 	position: absolute;
 // 	top: 1rem;
