--- a/templates/includes/partials/menu.twig
+++ b/templates/includes/partials/menu.twig
@@ -7,7 +7,7 @@
 		<div class="row between-xs middle-xs">
 			<div class="col col-auto-lg navbar-mobile">
 				<div class="brand">
-					<a href="/" ><img src="includes/img/logo.svg" alt="Cobiro logo"/></a>
+					<a href="/" ><img src="static/img/logo.svg" alt="Cobiro logo"/></a>
 				</div>
 				<button class="menu-toggle btn" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="icon-bar top-bar"></span>
