--- a/templates/includes/sections/3-up-people.twig
+++ b/templates/includes/sections/3-up-people.twig
@@ -31,7 +31,7 @@
 								<h5 >{{ person.subtitle }}</h5>
 							</div>
 							{% if person.linkedin %}
-							<a href="{{ person.linkedin }}" target="_blank"><img class="social-icon" src="includes/img/linkedin.svg" alt="{{ person.personTitle }} linkedin profile"/></a>
+							<a href="{{ person.linkedin }}" target="_blank"><img class="social-icon" src="static/img/linkedin.svg" alt="{{ person.personTitle }} linkedin profile"/></a>
 							{% endif %}
 						</div>
 					</div>
