--- a/templates/includes/partials/footer.twig
+++ b/templates/includes/partials/footer.twig
@@ -1,3 +1,4 @@
+{% cache %}
 {% set footerMenu = craft.entries.section('footerMenu').all() %}
 {% set footerMenuMeta = craft.entries.section('footerMenuMeta').all() %}
 		<footer>
@@ -67,5 +68,6 @@
 			</div>
 		</footer>
 		<script src="{{ rev('bundle.js') }}"></script>
+		{% endcache %}
 	</body>
 </html>
