--- a/templates/index.twig
+++ b/templates/index.twig
@@ -16,7 +16,7 @@
 	'listPricing.children.children.children',
 	'video.children.children.children',
 	'quotes.children.children.children',
-	'featureList.children.children.children',]).all()
+	'featureList.children.children.children']).all()
 	%}
 
 {% for block in blocks %}
